--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
 <!-- angular -->
 <script src="scripts/services/module.service.js" type="text/javascript"></script>
 <script src="scripts/services/user.service.js" type="text/javascript"></script>
+<script src="scripts/services/interceptor.service.js" type="text/javascript"></script>
 <script src="scripts/services/example.service.js" type="text/javascript"></script>
 <script src="scripts/services/config.service.js" type="text/javascript"></script>
 <script src="scripts/services/authorization.service.js" type="text/javascript"></script>
@@ -63,6 +64,7 @@
 <script src="scripts/app.translate.js" type="text/javascript"></script>
 <script src="scripts/app.routing.js" type="text/javascript"></script>
 <script src="scripts/app.loadingbar.js" type="text/javascript"></script>
+<script src="scripts/app.interceptor.js" type="text/javascript"></script>
 <!-- endangular -->
 <!-- endbuild -->
 </body>
