--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,8 @@
 <script src="bower_components/angular-translate-storage-local/angular-translate-storage-local.js"></script>
 <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/lodash/lodash.js"></script>
+<script src="bower_components/restangular/dist/restangular.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -48,7 +50,6 @@
 <script src="scripts/services/user.service.js" type="text/javascript"></script>
 <script src="scripts/services/interceptor.service.js" type="text/javascript"></script>
 <script src="scripts/services/example.service.js" type="text/javascript"></script>
-<script src="scripts/services/config.service.js" type="text/javascript"></script>
 <script src="scripts/services/authorization.service.js" type="text/javascript"></script>
 <script src="scripts/directives/module.directive.js" type="text/javascript"></script>
 <script src="scripts/directives/menubar.directive.js" type="text/javascript"></script>
@@ -63,8 +64,10 @@
 <script src="scripts/app.module.js" type="text/javascript"></script>
 <script src="scripts/app.translate.js" type="text/javascript"></script>
 <script src="scripts/app.routing.js" type="text/javascript"></script>
+<script src="scripts/app.restangular.js" type="text/javascript"></script>
 <script src="scripts/app.loadingbar.js" type="text/javascript"></script>
 <script src="scripts/app.interceptor.js" type="text/javascript"></script>
+<script src="scripts/app.contant.js" type="text/javascript"></script>
 <!-- endangular -->
 <!-- endbuild -->
 </body>
