--- a/app/index.html
+++ b/app/index.html
@@ -62,11 +62,11 @@
 <script src="scripts/controllers/app.controller.js" type="text/javascript"></script>
 <script src="scripts/controllers/about.controller.js" type="text/javascript"></script>
 <script src="scripts/app.module.js" type="text/javascript"></script>
-<script src="scripts/app.translate.js" type="text/javascript"></script>
-<script src="scripts/app.routing.js" type="text/javascript"></script>
-<script src="scripts/app.restangular.js" type="text/javascript"></script>
-<script src="scripts/app.loadingbar.js" type="text/javascript"></script>
-<script src="scripts/app.interceptor.js" type="text/javascript"></script>
+<script src="scripts/configs/translate.config.js" type="text/javascript"></script>
+<script src="scripts/configs/routing.config.js" type="text/javascript"></script>
+<script src="scripts/configs/restangular.config.js" type="text/javascript"></script>
+<script src="scripts/configs/loadingbar.config.js" type="text/javascript"></script>
+<script src="scripts/configs/interceptor.config.js" type="text/javascript"></script>
 <script src="scripts/app.contant.js" type="text/javascript"></script>
 <!-- endangular -->
 <!-- endbuild -->
