--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="styles/main.css"/>
-    <link rel="stylesheet" href="styles/animation.css"/>
+    <!-- injector:css -->
+    <link rel="stylesheet" href="/styles/animation.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <!-- endinjector -->
     <!-- build:css(.tmp) styles/main.css -->
     <!-- endbuild -->
 </head>
