--- a/app/index.html
+++ b/app/index.html
@@ -48,11 +48,11 @@
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <!-- angular -->
-<script src="scripts/services/module.service.js" type="text/javascript"></script>
-<script src="scripts/services/user.service.js" type="text/javascript"></script>
-<script src="scripts/services/interceptor.service.js" type="text/javascript"></script>
-<script src="scripts/services/example.service.js" type="text/javascript"></script>
-<script src="scripts/services/authorization.service.js" type="text/javascript"></script>
+<script src="scripts/factories/module.factory.js" type="text/javascript"></script>
+<script src="scripts/factories/user.factory.js" type="text/javascript"></script>
+<script src="scripts/factories/interceptor.factory.js" type="text/javascript"></script>
+<script src="scripts/factories/example.factory.js" type="text/javascript"></script>
+<script src="scripts/factories/authorization.factory.js" type="text/javascript"></script>
 <script src="scripts/directives/module.directive.js" type="text/javascript"></script>
 <script src="scripts/directives/menubar.directive.js" type="text/javascript"></script>
 <script src="scripts/controllers/module.controller.js" type="text/javascript"></script>
